<resources>
  <string name="app_name">Trainer</string>
  <string name="workout">%s Workout</string>
  <string name="stretch_title">%s Stretch</string>
  <string name="confirm_workout_abort">Workout not completed, abort?</string>

  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>

  <string name="set_number_text" formatted="false">%s / %s Series</string>
  <string name="guidelines">Guidelines</string>
  <string name="comments">Comments</string>
  <string name="current">Current</string>
  <string name="last">Last</string>
  <string name="close">Close</string>
  <string name="submit">Submit</string>
  <string name="per_x">x</string>
  <string name="reps">reps</string>
  <string name="skip">Skip</string>
  <string name="stretch">Stretch</string>
  <string name="take_rest">Take a rest…</string>
  <string name="countdown_text_with_abort">%s sec\n\nClick to skip</string>
  <string name="countdown_text">%s sec</string>
  <string name="notification_countdown_text">%s sec</string>
  <string name="empty_field">Empty field!</string>
  <string name="workout_complete">Workout complete!</string>
  <string name="import_plan">Import Plan</string>
  <string name="export_plan">Export Plan</string>
  <string name="export_successful">Export Successful to:</string>
  <string name="import_successful">Import Successful</string>
  <string name="select_plan_file">Select Plan</string>
  <string name="set">Set</string>
  <string name="super_set">Super Set</string>
  <string name="cycle">Cycle</string>
  <string name="countdown_finished_notification">Finished</string>
  <string name="rest_in_progress_notification_title">Resting in progress</string>
  <string name="cycle_routine_ongoing_notification_title">Cycle exercise in progress</string>
  <string name="export_plan_warning">Sure you want to export? This will override existing exported plan.</string>
  <string name="result_missing_rep_count">Provide reps count!</string>
  <string name="start_btn">Start</string>
  <string name="one_more_btn">One more</string>
  <string name="finish_btn">Finish</string>
  <string name="next_exercise_label" formatted="false">Next: %s</string>
  <string name="retry">Retry</string>

  <string name="cycle_new">New Cycle</string>
  <string name="cycle_get_ready">Get Ready</string>
  <string name="cycle_resting">Rest</string>
  <string name="current_cycle">Cycles %s</string>
  <string name="last_cycles">Last %s</string>
  <string name="cycle_done">Cycle Done</string>
  <string name="cycle_complete">Cycle Complete</string>

  <string name="select_training_plan">Select Plan</string>
  <string name="no_training_plans">No training plans available</string>

  <string name="failure_export">Export Failure due to</string>
  <string name="failure_import">Import Failure due to</string>
  <string name="failure_external_storage_not_accessible">external storage is not accessible</string>
  <string name="failure_create_external_storage">Failed to create external storage folder</string>
  <string name="failure_refresh_training_plans">Failed to refresh training plans</string>

  <string name="failure_sync_on_select_training_plan">Failed to synchronize on training plan selection</string>
</resources>
