<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

  <RelativeLayout
      android:id="@+id/activity_set"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:focusableInTouchMode="true"
      tools:context="com.trainer.ui.SerieActivity">

    <ImageView
        android:id="@+id/exerciseImage"
        android:layout_width="@dimen/avatar_image_size"
        android:layout_height="@dimen/avatar_image_size"
        tools:src="@drawable/ex_bench_press"/>

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/exerciseImage"
        android:gravity="center"
        android:textAppearance="@style/Textappearance.Trainer.Headline"
        tools:text="Wyciskanie sztangi"/>

    <TextView
        android:id="@+id/setNumberTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/exerciseImage"
        android:layout_alignBottom="@id/exerciseImage"
        android:layout_below="@id/nameTextView"
        android:gravity="center"
        android:text="@string/set_number_text"
        android:textAppearance="@style/Textappearance.Trainer.Headline"
        tools:text="1 / 4 Series"/>

    <include
        android:id="@+id/parentarea_divider"
        layout="@layout/divider_horizontal"
        android:layout_marginTop="@dimen/default_padding"
        android:layout_marginBottom="@dimen/default_padding"
        android:layout_below="@id/exerciseImage"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/guidelines_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/parentarea_divider"
        android:textAppearance="@style/Textappearance.Trainer.Label"
        android:text="@string/guidelines"/>

    <TextView
        android:id="@+id/guidelinesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/guidelines_label"
        android:paddingBottom="@dimen/small_padding"
        android:textAppearance="@style/Textappearance.Trainer.ContinuousText"
        tools:text="- Brace your butt to prevent from farting\n- Don't cheat by not lifting at all"/>

    <TextView
        android:id="@+id/commentsLabelView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/guidelinesTextView"
        android:textAppearance="@style/Textappearance.Trainer.Label"
        android:text="@string/comments"/>

    <TextView
        android:id="@+id/commentsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/commentsLabelView"
        android:textAppearance="@style/Textappearance.Trainer.ContinuousText"
        tools:text="- This exercise sucks if you do it backwards\n- Sucks even more when done properly"/>

    <include
        android:id="@+id/parentarea_divider2"
        layout="@layout/divider_horizontal"
        android:layout_marginTop="@dimen/default_padding"
        android:layout_marginBottom="@dimen/default_padding"
        android:layout_below="@id/commentsTextView"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <View
        android:id="@+id/sep"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_below="@id/parentarea_divider2"
        android:layout_marginLeft="@dimen/default_padding"
        android:layout_marginRight="@dimen/default_padding"
        android:layout_alignTop="@id/parentarea_divider2"
        android:layout_alignBottom="@+id/parentarea_divider3"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/parentarea_divider2"
        android:layout_toLeftOf="@id/sep"
        android:orientation="vertical">

      <TextView
          android:id="@+id/current_progress_label"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:paddingBottom="@dimen/small_padding"
          android:textAppearance="@style/Textappearance.Trainer.Label"
          android:text="@string/current"/>

      <TextView
          android:id="@+id/progressTextView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:textAppearance="@style/Textappearance.Trainer.ContinuousText"
          tools:text="10kg x 15\n12,5kg x 12\n__kg x 10"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/last_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/parentarea_divider2"
        android:layout_toRightOf="@id/sep"
        android:orientation="vertical">

      <TextView
          android:id="@+id/last_progress_label"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:paddingBottom="@dimen/small_padding"
          android:textAppearance="@style/Textappearance.Trainer.Label"
          android:text="@string/last"/>

      <TextView
          android:id="@+id/lastProgressTextView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:textAppearance="@style/Textappearance.Trainer.ContinuousText"
          tools:text="10kg x 15\n12,5kg x 12\n15kg x 10"/>
    </LinearLayout>

    <include
        android:id="@id/parentarea_divider3"
        layout="@layout/divider_horizontal"
        android:layout_marginTop="@dimen/default_padding"
        android:layout_marginBottom="@dimen/default_padding"
        android:layout_below="@id/last_container"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <View
        android:id="@+id/sep2"
        android:layout_width="6dp"
        android:layout_height="6dp"
        android:layout_below="@id/parentarea_divider3"
        android:layout_marginLeft="@dimen/default_padding"
        android:layout_marginRight="@dimen/default_padding"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="70dp"
        android:layout_height="46dp"
        android:layout_below="@id/parentarea_divider3"
        android:inputType="numberDecimal"
        android:layout_toLeftOf="@id/sep2"
        android:gravity="center"
        android:imeOptions="actionNext"
        tools:text="10"/>

    <TextView
        android:id="@+id/inputSeparatorLabelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weightInput"
        android:layout_alignLeft="@id/sep2"
        android:layout_alignRight="@id/sep2"
        android:gravity="center_horizontal"
        android:textAppearance="@style/Textappearance.Trainer.ContinuousText"
        android:text="@string/per_x"/>

    <TextView
        android:id="@+id/weightTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/weightInput"
        android:layout_below="@id/weightInput"
        android:layout_alignLeft="@id/weightInput"
        android:layout_alignRight="@id/weightInput"
        android:gravity="center_horizontal"
        android:textAppearance="@style/Textappearance.Trainer.Label"
        tools:text="kg"/>

    <EditText
        android:id="@+id/repInput"
        android:layout_width="70dp"
        android:layout_height="46dp"
        android:layout_below="@id/parentarea_divider3"
        android:inputType="numberDecimal"
        android:layout_toRightOf="@id/sep2"
        android:gravity="center"
        android:imeOptions="actionDone"
        tools:text="15"/>

    <TextView
        android:id="@+id/repLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/repInput"
        android:layout_below="@id/repInput"
        android:layout_alignLeft="@id/repInput"
        android:layout_alignRight="@id/repInput"
        android:gravity="center_horizontal"
        android:textAppearance="@style/Textappearance.Trainer.Label"
        android:text="@string/reps"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/weightInput"
        android:layout_marginTop="32dp"
        android:text="@string/submit"/>

  </RelativeLayout>
</ScrollView>